--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-preset-react-app": "^3.1.0",
     "babel-runtime": "6.26.0",
     "body-parser": "^1.18.2",
+    "browser-cookies": "^1.2.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "cookie-parser": "^1.4.3",
@@ -35,8 +36,8 @@
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
-    "prop-types": "^15.6.0",
     "promise": "8.0.1",
+    "prop-types": "^15.6.0",
     "raf": "3.4.0",
     "react": "^16.2.0",
     "react-dev-utils": "^4.2.1",
